# universe-substrate

./: .gitignore  Cargo.toml  README.md
artifacts/: calibrate-channel-adaptive.txt  calibrate-channel-inert.txt  calibrate-channel-noise.txt  guarded-phase-relay-smoke.txt  phase-relay-smoke.txt  primitive-multiseed-sweep.txt  primitive-optimization-sweep.txt  primitive-stack-cohort-falsification.txt  primitive-stack-falsification.txt  relay-grid-search.txt  stage2-adaptive-4000.txt  stage2-adaptive-6000.txt  stage2-adaptive.txt  stage2-fixed.txt  stage2-inert.txt  stage3-noise-adaptive.txt  stage3-scar-adaptive.txt  stage3-scar-inert.txt  stage4-noise-adaptive.txt  stage4-scar-adaptive.txt  stage4-scar-inert.txt  stage5-noise-timeline.csv  stage5-noise-timeline.txt  stage5-scar-timeline.csv  stage5-scar-timeline.txt  test-adaptive.txt  test-inert.txt  universe-frame-repeat.txt  universe-frame.txt
artifacts/mathematical_primitives_review/: guarded-phase-relay-primitive.md  phase-relay-primitive.md  primitive-multiseed-sweep.md  primitive-optimization-sweep.md  primitive-stack-falsification.md  relay-grid-search.md
src/: falsify.rs  field.rs  lib.rs  main.rs  render.rs  sweep.rs
tools/relay-grid/: Cargo.toml
tools/relay-grid/src/: main.rs
